[gd_scene load_steps=8 format=2]

[ext_resource path="res://CoreGameScene.gd" type="Script" id=1]
[ext_resource path="res://BattleDeck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://ZCOOLXiaoWei-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Card.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerDeck" parent="." instance=ExtResource( 2 )]

[node name="Board" parent="." instance=ExtResource( 3 )]
position = Vector2( 192, 64 )

[node name="AiDeck" parent="." instance=ExtResource( 2 )]
position = Vector2( 600, 0 )

[node name="EndGame" type="ColorRect" parent="."]
editor/display_folded = true
visible = false
margin_right = 600.0
margin_bottom = 700.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Label" type="Label" parent="EndGame"]
margin_right = 600.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 2 )
text = "Game Over!
"
align = 1
valign = 1

[node name="Spoils" parent="EndGame" instance=ExtResource( 5 )]
position = Vector2( 257.755, 375.177 )
scale = Vector2( 2, 2 )

[node name="Label2" type="Label" parent="EndGame/Spoils"]
margin_left = 5.0
margin_top = -20.0
margin_right = 66.0
margin_bottom = -6.0
text = "Acquired:"

[node name="NewsLabel" type="Label" parent="."]
margin_right = 728.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "Player: 0
AI: 0"
align = 1
valign = 1
